<resources>
    <string name="app_name">Quiz Labs</string>
    <string name="botonJugar">JUGAR</string>
    <string name="nombreJuego">QUIZ LABS</string>
    <string name="botonInicio">INICIO</string>
    <string name="textoGameOver1">¡HAS OBTENIDO</string>
    <string name="textoGameOver2">PUNTOS!</string>
    <string name="RespuestaCorrecta">¡RESPUESTA CORRECTA!</string>
    <string name="botonSiguiente">SIGUIENTE</string>
    <string name="sumaPuntos">+3 PUNTOS</string>
    <string name="RespuestaIncorrecta">¡RESPUESTA INCORRECTA!</string>
    <string name="restaPuntos">-2 PUNTOS</string>
    <string name="botonReinciar">REINICIAR</string>

    <string name="pregunta1">1. ¿Quién ganó el mundial de fútbol en 2010?</string>
    <string name="botonFrancia">Francia</string>
    <string name="botonBrasil">Brasil</string>
    <string name="botonEspaña">España</string>
    <string name="botonArgentina">Argentina</string>

    <string name="pregunta2">2. ¿En qué año comenzó la Primera Guerra Mundial?</string>
    <string name="boton1905">1905</string>
    <string name="boton1914">1914</string>
    <string name="boton1921">1921</string>
    <string name="boton1939">1939</string>

    <string name="pregunta3">3. ¿Cuál es el planeta más grande del sistema solar?</string>
    <string name="opcionVenus">Venus</string>
    <string name="opcionJupiter">Júpiter</string>
    <string name="opcionMarte">Marte</string>
    <string name="opcionSaturno">Saturno</string>
    <string name="botonValidar">VALIDAR</string>

    <string name="pregunta4">4. ¿A qué país pertenece esta bandera?</string>
    <string name="textoSeleccionar">Selecciona tu respuesta en el cuadro blanco de abajo:</string>
    <string name="imagenBandera">BANDERA</string>
    <array name="opciones_respuestas">
        <item></item>
        <item>Islandia</item>
        <item>Suecia</item>
        <item>Noruega</item>
        <item>Finlandia</item>
    </array>
    <string name="selecciona_respuesta">Selecciona una respuesta</string>


    <string name="pregunta5">5. ¿Cuál de los siguientes logos NO es una marca de coches?</string>
    <string name="botonBMW">BMW</string>
    <string name="botonAudi">AUDI</string>
    <string name="botonRenault">RENAULT</string>
    <string name="botonApple">APPLE</string>
    <string name="botonSeat" />
    <string name="botonRegistrar">REGISTRAR</string>
    <string name="botonModificar">MODIFICAR</string>
    <string name="botonBuscar">BUSCAR</string>
    <string name="botonEliminar">ELIMINAR</string>
    <string name="txt_codigo">Código de la pregunta</string>
    <string name="txt_pregunta">Enunciado de la pregunta</string>
    <string name="txt_respuesta1">Respuesta 1</string>
    <string name="txt_respuesta2">Respuesta 2</string>
    <string name="txt_respuesta3">Respuesta 3</string>
    <string name="txt_respuesta4">Respuesta 4</string>
    <string name="txt_respuestaCorrecta">Respuesta correcta (1-4)</string>

    <string name="valorVacio">-</string>
    <string name="ir_a_bd">Ir a BD</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>