<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ladrillos"
    android:layout_weight="4"
    android:orientation="vertical"
    tools:context=".Pregunta1" >


    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="373dp"
        android:layout_height="143dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/pregunta1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/preg1resp3"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:onClick="comprobarRespuesta1"
        android:text="@string/botonEspaña"
        app:layout_constraintBottom_toTopOf="@+id/preg1resp4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/preg1resp1"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/botonFrancia"
        app:layout_constraintBottom_toTopOf="@+id/preg1resp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta1"
        app:layout_constraintVertical_bias="0.906" />

    <Button
        android:id="@+id/preg1resp2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/botonBrasil"
        app:layout_constraintBottom_toTopOf="@+id/preg1resp3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/preg1resp4"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="120dp"
        android:text="@string/botonArgentina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

