<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ladrillos"
    tools:context=".MainActivity">




    <Button
        android:id="@+id/botonJugar"
        android:layout_width="243dp"
        android:layout_height="57dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="casual"
        android:gravity="center"
        android:onClick="Jugar"
        android:text="@string/botonJugar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="358dp"
        android:layout_height="89dp"
        android:layout_marginTop="68dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="5dp"
        android:shadowDx="5"
        android:soundEffectsEnabled="false"
        android:text="@string/nombreJuego"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animattion_view_correct"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:lottie_autoPlay="true"
        app:lottie_fileName="quiz.json"
        app:lottie_loop="true"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <Button
        android:id="@+id/botonBD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="IrABaseDeDatos"
        android:text="@string/ir_a_bd"
        app:layout_constraintBottom_toTopOf="@+id/botonJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animattion_view_correct" />

</androidx.constraintlayout.widget.ConstraintLayout>