<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ladrillos"
    tools:context=".GameOverActivity">

    <Button
        android:id="@+id/botonInicioGO"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="inicio"
        android:text="@string/botonInicio"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <Button
        android:id="@+id/botonRanking"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="ranking"
        android:text="@string/RANKING"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="380dp"
        android:layout_height="66dp"
        android:fontFamily="casual"
        android:text="@string/textoGameOver1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewPuntos"
        android:layout_width="89dp"
        android:layout_height="79dp"
        android:fontFamily="casual"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="211dp"
        android:layout_height="83dp"
        android:fontFamily="casual"
        android:text="@string/textoGameOver2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="TextSizeCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/trofeo"
        android:layout_width="251dp"
        android:layout_height="251dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435"
        app:lottie_autoPlay="true"
        app:lottie_fileName="ranking.json"
        app:lottie_loop="true"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>